--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "hex": "node ./src/index.js"
+  },
   "author": "Jesse R Mykolyn",
   "license": "ISC",
   "devDependencies": {
