--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hex-scraper",
   "version": "0.0.0",
   "description": "/// TODO",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
