--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Jesse R Mykolyn",
   "license": "ISC",
   "devDependencies": {
-    "minimist": "^1.2.0"
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.2",
+    "typescript": "^2.5.3"
   },
   "dependencies": {
     "pkg-dir": "^2.0.0"
