chore(npm): Install node type declaration package.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jesse R Mykolyn",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^8.0.31",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.2.2",
     "typescript": "^2.5.3"
