chore(npm): Update package entry point.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hex-scraper",
   "version": "0.1.0",
   "description": "Hex Scraper compiles an HTML file of swatches corresponding to the colors used within a given stylesheet or CSS string.",
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
