--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^8.0.31",
     "ava": "^0.22.0",
     "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
     "gulp-typescript": "^3.2.2",
     "typescript": "^2.5.3"
   },
